# DSPP-trabalho-pratico-03

./: .gitignore  README.md  divisaotrabalhos.txt  docker-compose.yml  main.py  pyproject.toml  requirements.txt  seeder.py
app/: database.py  main.py  models.py  routes.py  schemas.py
